--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	</div>
 	<div class="panel">
 		<button class="simple_button" id="go_nearby">Show nearby rooms</button>
+      <div id="loc_status"></div>
 	</div>
 </div>
 
