--- a/index.html
+++ b/index.html
@@ -82,16 +82,15 @@
 		<button class="simple_button" id="go_room_settings">Done</button>
 	</header>
    <div class="panel simple_hidable" id="song_display">
-      <div class="panel" id="player_title">SONG TITLE
-      </div>
+      <div class="panel" id="player_title">SONG TITLE </div>
       <div class="player panel row ">
          <button class="simple_button" id="room_settings_rewind"><img src='/img/rew.png'></button>
          <button class="simple_button expando" id="room_settings_play"><img src='/img/play.png'></button>
          <button class="simple_button" id="room_settings_next"><img src='/img/ff.png'></button>
       </div>
-   </div>
-   <div  id="back_from_choose_song" class="panel simple_button">
-      <button>Choose this track</button>
+      <div  id="back_from_choose_song" class="panel simple_button">
+        <button>Choose this track</button>
+      </div>
    </div>
 	<div class="white panel expando">
       <form >
