--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="playlists">
 			<button class="simple_button" id="wesleyan_playlist">sounds by Wesleyan composers</button>
 			<button class="simple_button" id="seamus_playlist">sounds by SEAMUS composers</button>
-      <a href="https://soundcloud.com/groups/flashmob-radio-seamus-composers">Upload a sound</a>
+      <a target="_" href="https://soundcloud.com/groups/flashmob-radio-seamus-composers">Upload a sound</a>
     </div>
 		<h3 style="margin-top:10px">Or choose a genre</h3>
 		<div id="genres" class="simple_list">
@@ -175,13 +175,12 @@
 		</div>
 	</div>
 	<form class="panel row">
-		<button type='button' class="simple_button toggle_room_add_options">&uarr;</button>
+		<button type='button' class="simple_button toggle_room_add_options">&#9650;</button>
 		<input class="simple_input expando" id="message_add">
 	</form>
 	<div id="room_add_options" class="simple_hidable panel row">
 		<button id="room_link" class="simple_button">Link to another room</button>
 		<button id="add_choreo" class="simple_button">Add choreography</button>
-		<a href="#" class="closex simple_button toggle_room_add_options">x</a>
 	</div>
 </div>
 
