--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
          <button class="simple_button expando" id="room_settings_play"><img src='/img/play.png'></button>
          <button class="simple_button" id="room_settings_next"><img src='/img/ff.png'></button>
       </div>
-      <div class="tight panel" id="player_title">SONG TITLE </div>
-      <div  id="back_from_choose_song" class="tight panel simple_button">
-        <button>Choose this track</button>
+      <div class="tight panel row">
+        <div id="player_title" class="expando">SONG TITLE </div>
+        <button id="back_from_choose_song" class="simple_button"> Choose this </button>
       </div>
    </div>
 	<div class="white panel expando">
-      <form >
+      <form style="text-align:center;" >
          <input type="search" id="search_input" class="simple_input" placeholder="search for audio" /> 
       </form>
 		<ul id="search_results" class="simple_list">
@@ -106,7 +106,7 @@
 			<button class="simple_button" id="seamus_playlist">sounds by SEAMUS composers</button>
       <a target="_" href="https://soundcloud.com/groups/flashmob-radio-seamus-composers">Upload a sound</a>
     </div>
-		<h3 style="margin-top:10px">Or choose a genre</h3>
+		<h3 style="margin-top:20px">Or choose a genre</h3>
 		<div id="genres" class="simple_list">
 			<button data-set="text:name"></button>
 		</div>
@@ -149,7 +149,7 @@
 			<span id="room_requires" class="simple_label"></span>
 		</button>
 	</header>
-	<div id="song_player" class="player row panel simple_hidable">
+	<div id="song_player" class="player row simple_hidable">
 		<button class="simple_button" id="room_rewind"><img src='/img/rew.png'></button>
 		<div id="room_song_title" class="simple_label expando"></div>
 		<button class="simple_button expando" id="room_play">
