--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 <div class="page" id="room_settings">
 	<header>
-		<h1>This Room</h1>
+		<h1>Room setup</h1>
 		<button class="header_back_button simple_button" id="go_room">Done</button>
 	</header>
 
