--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    </div>
 	<div class="white panel expando">
       <form style="text-align:center;" >
-         <input type="search" id="search_input" class="simple_input" placeholder="search for audio" /> 
+         <input type="search" id="search_input" class="simple_input" placeholder="search soundcloud" /> 
       </form>
 		<ul id="search_results" class="simple_list">
 			<li data-set="text:title"></li>
@@ -184,6 +184,7 @@
 	</form>
 	<div id="room_add_options" class="simple_hidable panel row">
 		<button id="room_link" class="simple_button">Link to another room</button>
+		<button id="email_invite" class="simple_button">Invite someone</button>
 		<button id="add_choreo" class="simple_button">Add choreography</button>
 	</div>
 </div>
