--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
 			<a href="#" data-set="class:song_toggle_class"></a>
 			Listen to audio
 		</div>
-		<li> Track: <b data-set="text:song_title"></b> </li>
+		<li data-set="text:track"> Track: <b data-set="text:song_title"></b> </li>
 
 		<div id="set_riddle" class="simple_button  togrow">
 			<a href="#" data-set="class:riddle_toggle_class"></a>
 			Answer a riddle
 		</div>
-		<li> Riddle: <b data-set="text:riddle_q"></b> => <b data-set="text:riddle_a"></b> </li>
+    <li data-set="text:riddle"> Riddle: <b data-set="text:riddle_q"></b> => <b data-set="text:riddle_a"></b> </li>
 
 		<h3 style="margin-top:30px">Visible from links, or</h3>
 		<div id="toggle_visibility" class="simple_button togrow">
