--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<div id="room_add_options" class="simple_hidable panel row">
 		<button id="room_link" class="simple_button">Link to another room</button>
 		<button id="email_invite" class="simple_button">Invite someone</button>
-		<button id="add_choreo" class="simple_button">Add choreography</button>
+    <!--<button id="add_choreo" class="simple_button">Add choreography</button>-->
 	</div>
 </div>
 
