--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
 			</div>
 		</div>
 	</div>
-	<form class="panel row">
+	<form class="row">
 		<button type='button' class="simple_button toggle_room_add_options">&#9650;</button>
 		<input class="simple_input expando" id="message_add">
 	</form>
-	<div id="room_add_options" class="simple_hidable panel row">
+	<div id="room_add_options" class="tight simple_hidable panel row">
 		<button id="room_link" class="simple_button">Link to another room</button>
 		<button id="email_invite" class="simple_button">Invite someone</button>
     <!--<button id="add_choreo" class="simple_button">Add choreography</button>-->
