--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 		</div>
 
 		<div id="room_author_note" class="simple_button message">
-			This is your room.  Access <span class="simple_label" id="room_text_reqs"></span>.
-			<button><span class="simple_label" id="room_author_also_note"></span> &raquo;</button>
+			You made this room.  <span class="simple_label" id="room_text_reqs"></span>.
+			<a href="#" class="simple_label" id="room_author_also_note"></a> &raquo;
 		</div>
 
 		<div id="room_messages" class="expando fbobjlist">
@@ -178,7 +178,7 @@
 			</div>
 		</div>
 	</div>
-	<form class="row">
+	<form class="row" id="chatbar">
 		<button type='button' class="simple_button toggle_room_add_options">&#9650;</button>
 		<input class="simple_input expando" id="message_add">
 	</form>
