--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Many Secret Doors</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0,minimal-ui" />
 <link rel="apple-touch-icon-precomposed" href="icon.jpg" />
 
 
