--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 <script src='https://cdn.firebase.com/v0/firebase.js'></script>
 <script src='https://cdn.firebase.com/js/simple-login/1.2.3/firebase-simple-login.js'></script>
 <script src="https://connect.soundcloud.com/sdk.js"></script>
+<script src="hammer.min.js"></script>
 <script src="firewidget.js"></script>
 <script src="fb.js"></script>
 <script src="english.js"></script>
