--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		<button id="room_backlinks_div" class="simple_button">
 			<b id="room_backlinks_count" class="simple_label"></b>
 		</button>
-		<h1 class="simple_button edit_settings">
+		<h1 class="simple_button edit_title">
 			<span id="room_title" class="simple_label"></span>
 			<small id="room_member_names" class="simple_label"></small>
 		</h1>
