--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <div class="page" id="show_room">
 	<header>
-		<button id="go_rooms" class="header_back_button simple_button"><big>&larr;</big></button>
+		<button id="go_rooms" class="header_back_button simple_button"><big>&#65308;</big></button>
 		<button id="room_backlinks_div" class="simple_button">
 			<b id="room_backlinks_count" class="simple_label"></b>
 		</button>
@@ -178,7 +178,7 @@
 		</div>
 	</div>
 	<form class="row" id="chatbar">
-		<button type='button' class="simple_button toggle_room_add_options">&#9650;</button>
+		<button type='button' class="centerflex simple_button toggle_room_add_options">&#9650;</button>
 		<input class="simple_input expando" id="message_add">
 	</form>
 	<div id="room_add_options" class="tight simple_hidable panel row">
