--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    </div>
 	<div class="white panel expando">
       <form style="text-align:center;" >
-         <input type="search" id="search_input" class="simple_input" placeholder="search soundcloud" /> 
+         <input type="search" id="search_input" class="simple_input" placeholder="search soundcloud" />
       </form>
 		<ul id="search_results" class="simple_list">
 			<li data-set="text:title"></li>
@@ -178,7 +178,7 @@
 		</div>
 	</div>
 	<form class="row" id="chatbar">
-		<button type='button' class="centerflex simple_button toggle_room_add_options">&#9650;</button>
+		<button type='button' class="centerflex simple_button toggle_room_add_options">+</button>
 		<input class="simple_input expando" id="message_add">
 	</form>
 	<div id="room_add_options" class="tight simple_hidable panel row">
